Добавить статистику по новым пользователям